feat: add Hey What's That antenna coverage overlay
Fetches antenna coverage outlines from heywhatsthat.com once at startup
and displays them as toggleable rings on the live map.

Configuration (all optional):
- HEYWHATSTHAT: site ID token (e.g. NN6R7EXG) — enables the feature
- HEYWHATSTHAT_ALTS: comma-separated altitudes in feet (default: 10000,30000)
- HEYWHATSTHAT_SAVE: path for cached GeoJSON (default: /run/acars/heywhatsthat.geojson)

Backend:
- New service (heywhatsthat.ts): fetch, convert, cache with sidecar metadata
- Altitude conversion: user configures feet, API receives meters (feet * 0.3048),
  ring.alt (meters) is converted back to feet for GeoJSON properties and labels
- Cache invalidation via SHA-256 hash of token:alts:vSCHEMA_VERSION — auto-busts
  when config changes OR when code-level schema changes (bump CACHE_SCHEMA_VERSION)
- Fastify GET /data/heywhatsthat.geojson endpoint serves the cached file
- features_enabled socket event includes adsb.heywhatsthat_url when configured
- nginx proxies /data/heywhatsthat.geojson to the backend (base-path aware)

Frontend:
- HeyWhatsThatOverlay component: MapLibre GeoJSON Source + line/label layers
- Catppuccin-themed per-ring colours (cycles through palette by ring_index)
- Toggle button (faTowerBroadcast) in MapControls, only visible when backend
  has a token configured; defaults to shown (showHeyWhatsThat: true)
- Settings store v9 migration adds showHeyWhatsThat with default true
- Vite dev proxy forwards /data/heywhatsthat.geojson to backend

Types:
- Decoders.adsb.heywhatsthat_url?: string added to acarshub-types

Tests (47 backend, settings store migration tests updated):
- computeConfigHash: determinism, uniqueness, schema version inclusion
- feetAltListToMeters: conversion correctness, regression guard (feet != meters)
- convertToGeoJSON: coordinate swap, ring closure, altitude unit conversion
- initHeyWhatsThat: cache hit/miss, invalidation, fetch failure degradation
- regression: API URL contains m

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,7 @@ acarshub-backend/coverage/
 # *.db is globally ignored above (production databases must not be committed)
 !test-fixtures/seed.db
 !test-fixtures/seed.db.meta.json
+
+# Local dev HeyWhatsThat cache files (written when HEYWHATSTHAT_SAVE points to the repo root)
+geo.json
+geo.json.meta.json
