perf: bundle size optimizations
Route-based lazy loading (74% smaller initial JS payload)
- App.tsx: Convert all non-landing pages to React.lazy()
- LiveMessagesPage stays eager (landing page); all others deferred
- Suspense boundary shows loading spinner while async chunks fetch
- Initial gzipped JS: 582 KB -> 150 KB on first page load
- map.js (282 KB gz) and charts.js (78 KB gz) now load only when needed

WebP sprite sheets (42% smaller aircraft marker images)
- generate-colored-sprites.ts: emit lossless .webp alongside every .png
- AircraftSprite.scss: use image-set() - WebP for capable browsers, PNG fallback
- All 16 color variants: 5,688 KB -> 3,324 KB total
- .gitattributes: mark .webp as binary (prevent pre-commit line-ending hooks)
- flake.nix: add .webp to extraExcludes for pre-commit hooks

nginx: GeoJSON compression
- sites-enabled/acarshub: add geojson -> application/json MIME mapping
- .geojson files now included in gzip_types (was application/octet-stream)
- FIRBoundaries (2.7 MB) verified: served at 342 KB gzipped (87% reduction)

nginx: brotli compression
- Dockerfile: install libnginx-mod-http-brotli-filter
- nginx.conf: add brotli on, brotli_comp_level 6, brotli_types
- Module auto-loaded via /etc/nginx/modules-enabled/ include
- text/html added to both gzip_types and brotli_types
- Verified: Content-Encoding: br served for JS assets

nginx: pre-compressed assets (gzip_static)
- Dockerfile: gzip -9 --keep all .js/.css/.geojson after dist copy
- sites-enabled/acarshub: gzip_static on
- Pre-compressed .gz files present in /webapp/dist/assets/
- nginx serves .gz files directly with zero runtime compression CPU

--- a/rootfs/etc/nginx.acarshub/nginx.conf
+++ b/rootfs/etc/nginx.acarshub/nginx.conf
@@ -62,6 +62,39 @@ http {
 	gzip_http_version 1.1;
 	gzip_min_length 256;
 	gzip_types
+		text/html
+		text/plain
+		text/css
+		text/xml
+		text/javascript
+		application/json
+		application/javascript
+		application/x-javascript
+		application/xml
+		application/xml+rss
+		application/rss+xml
+		application/atom+xml
+		application/x-font-ttf
+		application/x-font-opentype
+		font/truetype
+		font/opentype
+		font/eot
+		image/svg+xml
+		image/x-icon;
+
+	##
+	# Brotli Settings
+	# Requires libnginx-mod-http-brotli-filter (installed in Dockerfile).
+	# The module is auto-loaded via /etc/nginx/modules-enabled/ which this
+	# config includes at the top.  Brotli typically achieves 15-25% better
+	# compression than gzip for text/JS/JSON assets.
+	##
+
+	brotli on;
+	brotli_comp_level 6;
+	brotli_min_length 256;
+	brotli_types
+		text/html
 		text/plain
 		text/css
 		text/xml
