--- a/acarshub-backend/package.json
+++ b/acarshub-backend/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@acarshub/types": "*",
     "@airframes/acars-decoder": "1.8.7",
-    "@fastify/cors": "^11.2.0",
+    "@fastify/cors": "11.2.0",
     "better-sqlite3": "12.6.2",
     "drizzle-orm": "0.45.1",
     "fastify": "5.7.4",
@@ -42,7 +42,7 @@
     "@biomejs/biome": "2.4.4",
     "@types/better-sqlite3": "7.6.13",
     "@types/node": "25.3.0",
-    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/coverage-v8": "4.0.18",
     "drizzle-kit": "0.31.9",
     "socket.io-client": "^4.8.3",
     "tsx": "4.21.0",
