--- a/acarshub-react/package.json
+++ b/acarshub-react/package.json
@@ -34,12 +34,12 @@
     "chartjs-plugin-datalabels": "2.2.0",
     "date-fns": "4.1.0",
     "loglevel": "1.9.2",
-    "maplibre-gl": "5.18.0",
+    "maplibre-gl": "5.19.0",
     "react": "19.2.4",
     "react-chartjs-2": "5.3.1",
     "react-dom": "19.2.4",
     "react-map-gl": "8.1.0",
-    "react-router-dom": "7.13.0",
+    "react-router-dom": "7.13.1",
     "socket.io-client": "4.8.3",
     "zustand": "5.0.11"
   },
@@ -55,7 +55,7 @@
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
-    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/coverage-v8": "4.0.18",
     "@vitest/ui": "4.0.18",
     "axe-core": "4.11.1",
     "canvas": "3.2.1",
