--- a/acarshub-backend/package.json
+++ b/acarshub-backend/package.json
@@ -36,6 +36,7 @@
     "pino-pretty": "13.1.3",
     "prom-client": "^15.1.3",
     "socket.io": "4.8.3",
+    "zeromq": "^6.4.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
