fix(e2e): fix fullstack test runner and integration test flakiness
- docker-compose.test.yml: fix YAML folded-scalar bug where --config and
  --reporter were treated as separate bash commands (exit 127); switch
  playwright command to YAML list format

- docker-compose.test.yml: add DB_SAVE_DAYS=36500 / DB_ALERT_SAVE_DAYS=36500
  to prevent the database pruner from wiping seed data (May 2024 messages)
  ~60 s into the test run

- docker-compose.test.yml: add stop_grace_period: 5s to backend service to
  cap s6-rc shutdown time

- justfile: rewrite test-e2e-fullstack as a bash shebang recipe using
  'docker compose up -d' + 'docker compose run --rm playwright' instead of
  'up --abort-on-container-exit'; Compose v5 does not trigger abort when a
  container exits with code 0, causing the recipe to hang on passing runs.
  The new pattern returns immediately when playwright finishes and always
  runs 'down --timeout 5' for cleanup, keeping node_modules volumes cached.

- search-integration.spec.ts: fix strict-mode violation in searchBy() helper;
  the [class*="empty"] fallback in the .or() chain was matching
  .message-content--empty divs inside returned cards (12 elements total),
  causing toBeVisible() to throw. Replaced with a CSS comma-selector +
  .first() which always resolves to exactly one element.

- alerts-integration.spec.ts: fix flaky WN4899 historical count assertion;
  the results stat renders immediately with 0 while the Socket.IO query is in
  flight. Switched from a one-shot read to expect.poll() which retries until
  the count becomes positive.

- SearchPage.tsx: fix empty-form submit sending no query; executeSearch()
  was returning early on empty params, preventing the backend show-all path
  from being exercised. Added submitIntent flag: form submit with all fields
  empty now sends a query (backend returns first page of all messages),
  while debounced input-change on empty params still clears results without
  querying.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -65,6 +65,12 @@ services:
       # Reduce log verbosity in CI
       - MIN_LOG_LEVEL=3
       - QUIET_MESSAGES=true
+      # Prevent the pruner from deleting seed messages during the test run.
+      # Seed data is from May 2024; with the default 7-day retention the pruner
+      # wipes everything ~60 s after startup, causing late-running tests to see
+      # an empty database.  36500 days (≈ 100 years) effectively disables pruning.
+      - DB_SAVE_DAYS=36500
+      - DB_ALERT_SAVE_DAYS=36500
       # Disable range rings (no ADS-B, so not needed)
       - ENABLE_RANGE_RINGS=false
     volumes:
@@ -84,6 +90,10 @@ services:
       timeout: 5s
       retries: 25
       start_period: 30s
+    # Limit graceful-stop wait so `docker compose up` exits quickly after
+    # playwright finishes.  The default is 10 s but s6-rc can take longer;
+    # capping it at 5 s prevents a silent 30 s hang in the terminal.
+    stop_grace_period: 5s
     # Expose port 80 on the host for ad-hoc manual inspection
     ports:
       - "3001:80"
@@ -113,14 +123,15 @@ services:
       - PLAYWRIGHT_INTEGRATION=true
       # Backend is reachable at http://backend inside the compose network
       - INTEGRATION_BASE_URL=http://backend
-    command: >
-      bash -c "
+    command:
+      - bash
+      - -c
+      - |
         npm ci &&
         cd acarshub-react &&
-        npx playwright test e2e/integration/
-          --config playwright.integration.config.ts
+        npx playwright test e2e/integration/ \
+          --config playwright.integration.config.ts \
           --reporter=line
-      "
 
 volumes:
   # Shared writable volume for the seed DB and RRD file (wiped by `down --volumes`)
