fix: v4 bleeding edge action name

--- a/.github/workflows/4v_deploy_bleeding_edge.yml
+++ b/.github/workflows/4v_deploy_bleeding_edge.yml
@@ -1,4 +1,4 @@
-name: Deploy v4 Test
+name: Deploy v4 Test Bleeding Edge
 on:
   # Build and deploy the image on pushes to main branch
   workflow_dispatch:
