chore: remove unused env vars from Python era
Remove seven environment variables that are no longer implemented in
the Node.js codebase and update one stale description.

ENABLE_WEB
- nginx and the Node.js backend are now unconditional; the variable
  served no purpose in the new architecture
- Removed ENABLE_WEB guards from nginx.sh, webapp.sh, and all five
  TCP connection checks in healthcheck.sh
- Removed from Dockerfile ENV block, docker-compose.test.yml, and
  README General table

QUIET_MESSAGES
- Was parsed in config.ts and included in ConfigSchema/getConfig()
  but never read by any service, formatter, or handler
- Removed the constant, schema field, and getConfig() entry
- Removed tests, test fixture field, and test-setup.ts comment
- Removed from Dockerfile ENV block and docker-compose.test.yml

FEED
- ACARS.io feeding was never ported from the Python backend
- Removed from Dockerfile ENV block and README General table

TAR1090_URL
- Python-era variable (acarshub_helpers.py); migration plan explicitly
  deferred it; FLIGHT_TRACKING_URL is the current equivalent
- Removed from README General table and format note

AUTO_VACUUM
- Python-era SQLite one-time vacuum (upgrade_db.py); not implemented
  in the Node.js db layer
- Removed from README General table

DB_FTS_OPTIMIZE
- Python-era FTS optimisation knob; nothing in the Node.js codebase
  reads it
- Removed from Dockerfile ENV block and README General table

HIDE_VERSION_UPDATE
- Removed from README General table

DB_BACKUP description fix
- Replaced the stale SQLAlchemy URL description with the accurate
  plain SQLite file path description matching db/client.ts behaviour

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -43,7 +43,7 @@ services:
   # ── backend ────────────────────────────────────────────────────────────────
   # Production Docker image running with the seed database.
   # All message decoders are disabled — there are no external TCP feeds in the
-  # test environment. ENABLE_WEB=true keeps nginx + the Node.js backend running.
+  # test environment.
   backend:
     image: ah:test
     depends_on:
@@ -58,13 +58,10 @@ services:
       - ENABLE_HFDL=false
       - ENABLE_IMSL=false
       - ENABLE_IRDM=false
-      # Web server must stay enabled (serves React SPA + Socket.IO)
-      - ENABLE_WEB=true
       # Disable ADS-B polling (no external URL available in CI)
       - ENABLE_ADSB=false
       # Reduce log verbosity in CI
       - MIN_LOG_LEVEL=3
-      - QUIET_MESSAGES=true
       # Prevent the pruner from deleting seed messages during the test run.
       # Seed data is from May 2024; with the default 7-day retention the pruner
       # wipes everything ~60 s after startup, causing late-running tests to see
