--- a/acarshub-backend/package.json
+++ b/acarshub-backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
+    "build:bundle": "esbuild src/server.ts --bundle --platform=node --format=esm --target=node22 --external:better-sqlite3 --external:zeromq --external:node:* --outfile=dist/server.bundle.mjs",
     "start": "node dist/server.js",
     "clean": "rm -rf dist",
     "lint": "biome check .",
