fix(backend): quote --external:node:* glob in build:bundle script
Without quotes the shell invoked by npm could expand node:* as a
filesystem glob. It won't match anything in practice, but quoting it
is correct and matches the style already used in the Dockerfile
(--external:'node:*').

The output path (dist/server.bundle.mjs) is intentional — this script
is a local dev/test convenience. The Docker build calls esbuild directly
and stages the output to /backend/server.bundle.mjs in one step.

--- a/acarshub-backend/package.json
+++ b/acarshub-backend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@acarshub/backend",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "ACARS Hub Node.js backend server",
   "type": "module",
   "main": "./dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "build:bundle": "esbuild src/server.ts --bundle --platform=node --format=esm --target=node22 --external:better-sqlite3 --external:zeromq --external:node:* --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --outfile=dist/server.bundle.mjs",
+    "build:bundle": "esbuild src/server.ts --bundle --platform=node --format=esm --target=node22 --external:better-sqlite3 --external:zeromq '--external:node:*' --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --outfile=dist/server.bundle.mjs",
     "start": "node dist/server.js",
     "clean": "rm -rf dist",
     "lint": "biome check .",
