perf(live-messages): virtual windowed list via @tanstack/react-virtual
Reduces DOM nodes from ~90 fully-mounted MessageGroup trees down to
~7 (overscan=3 above/below viewport). Theme switching, which cascades
CSS variables through every mounted card, is now instant.

Core changes
------------
- Install @tanstack/react-virtual
- LiveMessagesPage: replace flat .map() render with useVirtualizer
  * Absolute-position items inside a single 'height: totalSize' container
  * measureElement ref lets virtualizer learn each card's true height
  * ESTIMATED_ITEM_HEIGHT=300 biased high so measurement corrections
    drift view slightly downward (imperceptible) rather than upward
- Scroll anchoring (useLayoutEffect, runs before paint):
  * Detects prepended items by comparing prevFirstKey + prevTotalSize
  * Adjusts scrollTop by (newTotalSize - prevTotalSize) so the user's
    current view does not move when new messages arrive at index 0
  * Only fires when scrollTop > 0; at the top the view auto-follows
- Dynamic scroll-container height via ResizeObserver:
  * Measures window.innerHeight - scrollEl.getBoundingClientRect().top
  * Adapts automatically to any nav/header/filter-bar height change
  * No hardcoded pixel values or CSS custom properties needed
- Tab state lifted out of MessageGroup into useRef<Map<string,number>>
  * Tab selections survive virtualizer unmount/remount cycles
  * Ref mutations cause zero re-renders in sibling groups

MessageGroup changes
--------------------
- Accepts optional activeIndex + onActiveIndexChange props
- When supplied (Live Messages page): controlled mode, state lives in
  parent ref map
- When omitted (AlertsPage, AircraftMessagesModal): falls back to
  internal useState (uncontrolled mode, no breaking change)

CSS changes
-----------
- .live-messages-page: display:flex column; min-height:200px fallback
- .live-messages-page .page__content: flex:1; min-height:0; overflow:hidden
- .message-list: height:100% + overflow-y:auto (scroll conta

--- a/acarshub-react/package.json
+++ b/acarshub-react/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@acarshub/types": "*",
+    "@tanstack/react-virtual": "^3.13.19",
     "chart.js": "4.5.1",
     "chartjs-adapter-date-fns": "3.0.0",
     "chartjs-plugin-datalabels": "2.2.0",
