--- a/acarshub-backend/package.json
+++ b/acarshub-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acarshub/backend",
-  "version": "4.1.4",
+  "version": "4.1.4-beta.1",
   "description": "ACARS Hub Node.js backend server",
   "type": "module",
   "main": "./dist/server.js",
