--- a/acarshub-react/package.json
+++ b/acarshub-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acarshub-react",
   "private": true,
-  "version": "4.1.4",
+  "version": "4.1.4-beta.1",
   "type": "module",
   "homepage": ".",
   "scripts": {
