--- a/acarshub-types/package.json
+++ b/acarshub-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acarshub/types",
-  "version": "4.1.4",
+  "version": "4.1.4-beta.1",
   "description": "Shared TypeScript type definitions for ACARS Hub frontend and backend",
   "type": "module",
   "main": "./dist/index.js",
