fix(e2e): self-contained Dockerfile.e2e + fix all test failures
Dockerfile.e2e:
- New self-contained E2E image based on mcr.microsoft.com/playwright:v1.58.2-noble
- Builds types + React frontend (VITE_E2E=true) inside the container
- Sets PLAYWRIGHT_DOCKER=true so all 5 browser projects are enabled
- playwright.config.ts webServer config starts vite preview automatically
  inside the container — no host-side server or node_modules mount needed
- npm ci layer is cached independently of source for fast rebuilds

justfile:
- test-e2e-docker / test-e2e-docker-debug: replace the host-server +
  volume-mount approach with docker build -f Dockerfile.e2e + docker run
- Eliminates pkill MainThread (unreliable on Linux), background vite preview,
  named volume juggling, and --network=host

CI (e2e.yml):
- Drop Set up Node.js and Install npm workspace dependencies steps —
  everything now happens inside the Docker image

Navigation.tsx:
- Change mobile nav container from <div> to <nav> so
  document.querySelector('nav') returns a result on mobile viewports
- Fixes accessibility E2E test: 'Navigation should have proper ARIA landmarks'
  which was failing on Mobile Chrome and Mobile Safari

e2e/smoke.spec.ts:
- Update 'should be responsive on mobile viewport' to look for
  nav.mobile_nav_container instead of div.show_when_small — the old class
  was removed in the useMediaQuery conditional-render refactor

e2e/search.spec.ts:
- Test 4 (displays results): remove post-results 'Search button visible'
  assertion — on mobile, the submit handler scrolls to the results section
  which crosses the 80px threshold and auto-collapses the form, hiding the
  button. Asserting results-info is the correct signal that loading cleared.
- Test 6 (clear button): expand the form before clicking Clear if the
  expand chevron is visible (form was auto-collapsed by the scroll above)

--- a/.github/workflows/fullstack-e2e.yml
+++ b/.github/workflows/fullstack-e2e.yml
@@ -41,7 +41,7 @@ on:
 
 jobs:
   fullstack-e2e:
-    name: Full-Stack E2E (Chromium)
+    name: Full-Stack E2E
     runs-on: ubuntu-latest
 
     steps:
